<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CSR</string>

    <string-array name="dummy_question_numbers">
        <item>Question 1</item>
    </string-array>

    <string name="nlu_version_date" tools:ignore="TypographyDashes">2019-07-12</string>

    <string name="finish">Finish</string>
    <string name="next">Next</string>

    <string name="mark">Mark</string>
    <string name="mark_and_next">Mark and Next</string>

    <string name="aptitude_test_completed_manually_msg">You have successfully completed the first step of the test.\n\nYou can now start the second step whenever you are ready for it.</string>
    <string name="aptitude_test_completed_by_timer_msg">Your time for the aptitude test has finished.\n\nYou can now start the second step whenever you are ready for it.</string>

    <string name="aptitude_test_submission_confirmation">Are you sure you want to finish your test?</string>
    <string name="aptitude_test_quit_confirmation">Are you sure you want to finish your test?</string>

    <string name="shared_preferences_filename">shared_preferences</string>
    <string name="shared_preferences_aptitude_test_completed">isAptitudeTestCompleted</string>
    <string name="shared_preferences_personality_test_completed">isPersonalityTestCompleted</string>
    <string name="career_stream_recommendation">Career Stream Recommendation</string>
    <string name="take_test">Take Test</string>
    <string name="view_streams">View Streams</string>
    <string name="enter_your_response">Enter your response</string>
    <string name="please_wait">Please Wait…</string>
    <string name="how_confident_are_you_about_your_answer">How confident are you about your answer?</string>
    <string name="clear">Clear</string>
    <string name="aptitude_test">Aptitude Test</string>
    <string name="personality_test">Personality Test</string>
    <string name="view_result">View Result</string>
    <string name="result">Result</string>

    <string name="spinner_question_number">Question %1$02d</string>
    <string name="remaining_time">%1$02d:%2$02d</string>
    <string name="percent">%1$d%%</string>

    <string name="aptitude_test_completed">Aptitude Test Completed</string>
    <string name="finish_test">Finish Test</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="quit_test">Quit Test</string>
    <string name="close">Close</string>

    <string name="instructions">Instructions</string>
    <string name="personality_test_instructions">Each question presents a scenario and you are required to respond with how you feel about that particular situation.\n\nThere are 2 types of question:\nQuestions which require you to simple answer with how much you prefer a given situation and the other which require you to type in your response/opinion for the situation given in the question.\n\nAnswer each question honestly as this information will be used to recommend the appropriate stream to you.\n\nNote: The questions which require you to type in your response need constant internet connection. If you are unable to connect to the internet, you can press skip those questions.</string>
    <string name="view_result_instructions">This screen shows your result for the test.\n\nYou can click on an entry in the aptitude section to see its description or click on a recommended stream to see its description as well as the jobs present in it.\n\nThe streams with a blue line are the ones which are recommended to you. The streams with yellow line are the ones for which you scored high, but not as high as the stream\'s requirements. You might still consider them if you think you like the jobs present in those streams.</string>
    <string name="start">Start</string>
    <string name="no_stream_recommended_msg">Unable to recommend any stream based on the received responses! Please try taking the test again and answering the questions only after giving them more consideration.</string>

    <string name="aptitude_test_instruction_optional">All the questions in the test are optional. So, you can skip any question if you want to do so.</string>

    <string name="scoring">Scoring</string>
    <string name="aptitude_test_instruction_scoring">Each question requires you to provide the answer as well as confidence you have regarding your answer. Your confidence will affect how much affect the question will have on your final score. The more confident you are for a correct answer, the more score you will get. Similarly, the more confident you are for a wrong answer, the more negative score you will get. So, answer each question carefully.</string>

    <string name="marking">Marking For Review</string>
    <string name="aptitude_test_instruction_marking">You can mark a question so that you can later visit it before submitting the test. To switch questions, you can use the dropdown menu which displays the current question number.</string>

    <string name="color_codes">Color Codes</string>
    <string name="aptitude_test_instruction_color_codes">The color of the questions denotes their state:\n- Red is unanswered\n- Yellow is marked\n- Green is answered</string>

    <string name="test_time">Test Time</string>
    <string name="aptitude_test_instruction_test_time">If you do not submit your test before the time limit, it will get auto submitted as soon as the timer reaches zero.</string>

    <string name="all_the_best">All the best!</string>
</resources>
